--- a/Rock paper scissor/style.css
+++ b/Rock paper scissor/style.css
@@ -59,3 +59,27 @@ img{
     display: inline;
     padding: 1rem;
 }
+
+
+/* media query */
+@media only screen and (max-width: 600px) {
+    h1{
+        font-size: 20px;
+    }
+
+    .choices{
+        display: block;
+     } 
+     .score{
+        font-size: 1rem;
+    }
+    #msg{
+        border-radius: 1rem;
+        background-color:#023047 ;
+        color: white;
+        font-size: 1rem;
+        display:block;
+        padding: 1rem;
+    }
+
+}
